--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,6 @@
+#limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s; #每秒请求一次
+#limit_conn_zone $binary_remote_addr zone=conn-zone:10m;
+
 server {
     listen       80;
     server_name  localhost;
@@ -8,12 +11,16 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
+		#limit_req zone=one burst=5;
+	   # limit_conn zone=conn-zone 1;
     }
 	
 	# nginx 状态信息
 	location /status {
 		stub_status on;
 		access_log off;
+		deny all;
+		allow 192.168.18.0/24;
 	}
 
     #error_page  404              /404.html;
@@ -42,12 +49,20 @@ server {
     #}
 
 	location /download {
+		#limit_req zone=one burst=5;
 		alias /opt/src;
 		autoindex on;
 		autoindex_exact_size off; #显示文件大概的大小
 		autoindex_localtime on; #显示文件为服务器时间
 		charset utf-8,gbk;  #解决中文乱码
+		auth_basic "User Authentication";
+		auth_basic_user_file /etc/nginx/conf.d/auth.passwd;
 	}
     
+	location ~ .*\.(jpg|gif|png)$ {
+		root /opt/src/img;
+		gzip_http_version 1.1;
+		expires 10d;
+	}
 }
 
