--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,11 +23,14 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
+    tcp_nopush     on;
 
     keepalive_timeout  65;
-
-    #gzip  on;
+	
+    #开启压缩
+    gzip  on;
+	gzip_comp_level 2;
+	gzip_min_length 50;
 
     include /etc/nginx/conf.d/*.conf;
 }
