add dynamic_stastic_seprate file

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -59,10 +59,18 @@ server {
 		auth_basic_user_file /etc/nginx/conf.d/auth.passwd;
 	}
     
+	#静态资源的压缩和缓存
 	location ~ .*\.(jpg|gif|png)$ {
 		root /opt/src/img;
 		gzip_http_version 1.1;
 		expires 10d;
+		#静态资源防盗链
+		valid_referers none blocked 192.168.18.24;
+		if ($invalid_referer) {
+			return 403;
+		}
 	}
+
+	
 }
 
