--- a/nginx/static.conf
+++ b/nginx/static.conf
@@ -1,3 +1,5 @@
+#设置代理缓存
+proxy_cache_path /opt/src/cache levels=1:2 keys_zone=code_cache:10m max_size=10g inactive=30m use_temp_path=off;
 upstream tomcat_demo {
     server 127.0.0.1:8080;
 }
@@ -6,9 +8,17 @@ server {
 	listen 8090;
 	root /opt/src;
 	index index.html;
-	
-	location / {
+    #设置部分页面不缓存
+	if ($request_uri  ~ ^/(login|register|password)) {
+	    set $cookie_nocache 1;
 	}
+
+	location / {
+		if ($http_user_agent ~* 'Iphone') {
+			root /opt/iphone;
+		}
+	}
+
 	location ~ .*\.(jpg|gif|png|html|css|js)$ {
 		root /opt/src/static;
 	}
@@ -17,6 +27,11 @@ server {
 	location ~ .*\.(jsp)$ {
 		proxy_pass http://tomcat_demo;
 		include proxy_params;
-		root root/apache-tomcat-8.5.57/webapps/ROOT;
+		proxy_cache code_cache; #开启缓存
+		proxy_cache_valid 200 304 12h;
+		proxy_cache_valid any 10m;
+		proxy_no_cache $cookie_nocache $arg_nocache $arg_comment; #设置不缓存
+		add_header Nginx-Cache "$upstream_cache_status"; #添加响应头 缓存是否命中
+		proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
     }
 }
