add new rewrite example

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -32,23 +32,7 @@ server {
         root   /usr/share/nginx/html;
     }
 
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-	location /download {
+    	location /download {
 		#limit_req zone=one burst=5;
 		alias /opt/src;
 		autoindex on;
@@ -71,6 +55,8 @@ server {
 		}
 	}
 
-	
+	#nginx rewrite的使用以及重定向
+	#将所有请求都转发到page页面下的maintain.html
+	#rewrite ^(.*)$ /page/maintain.html;
 }
 
