add gtid configure

--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,16 +1,17 @@
 [mysqld]
 log_queries_not_using_indexes=1
-long_query_time=0.1
-slow_query_log=1
-slow_query_log_file=db-slow.log
-gtid-mode=on
-enforce-gtid-consistency=true
+long_query_time=0.1 #慢查询时间阈值
+slow_query_log=1  #开启慢查询
+slow_query_log_file=db-slow.log #慢查询日志名称以及存放路径
+gtid-mode=on                   #开启gtid模式 
+enforce-gtid-consistency=true   
+log-slave-updates=1           #gtid复制
 basedir=/var/lib/mysql
 datadir=/var/lib/mysql/data
 port=3306
 socket=/tmp/mysql.sock
-character-set-server=utf8mb4
-log-error=/var/lib/mysql/data/mysqld.log
-innodb_data_file_path=ibdata1:12M;ibdata2:128M;ibdata3:128M:autoextend
-log_bin=mysql-bin
-server-id=1
+character-set-server=utf8mb4           
+log-error=/var/lib/mysql/data/mysqld.log   
+innodb_data_file_path=ibdata1:12M;ibdata2:128M;ibdata3:128M:autoextend #元数据的个数
+log_bin=mysql-bin #开启binlog
+server-id=1    #每个mysql-server的独立id 主从复制使用
